@@ -1,6 +1,10 @@
 Changelog
 =========
 
+### To be Released
+
+* [env-set] Advise to restart after setting the environment #373
+
 ### 1.9.0
 
 * [alerts] Add all command to CRUD alerts #346
